[package]
name = "vcontrold-mqttd"
version = "1.0.0"
edition = "2021"
description = "MQTT bridge for vcontrold (Viessmann heating controller)"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "process", "signal"] }
rumqttc = { version = "0.25", features = ["use-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
hostname = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
